edx/rsvp-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp
  labels:
    app: rsvp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp
  template:
    metadata:
      labels:
        app: rsvp
    spec:
      containers:
        - name: rsvp-app
          image: teamcloudyuga/rsvpapp
          ports:
            - containerPort: 5000
              name: web-port
