edx/rsvp-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: rsvpdb
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    appdb: rsvpdb
